--- a/launch/package.xml
+++ b/launch/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>bird_autodriving_core</name>
+  <name>launch</name>
   <version>0.0.0</version>
-  <description>The bird_autodriving_core package</description>
+  <description>The launch package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jjw@todo.todo">jjw</maintainer>
+  <maintainer email="bitdol@todo.todo">bitdol</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/bird_autodriving_core</url> -->
+  <!-- <url type="website">http://wiki.ros.org/launch</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,30 +49,15 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <!--build_depend>enum</build_depend-->
-  <!--build_depend>os</build_depend-->
-  <build_depend>roslaunch</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <!--build_depend>subprocess</build_depend-->
-  <!--build_depend>sys</build_depend-->
-  <!--build_export_depend>enum</build_export_depend-->
-  <!--build_export_depend>os</build_export_depend-->
-  <build_export_depend>roslaunch</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  <!--build_export_depend>subprocess</build_export_depend-->
-  <!--build_export_depend>sys</build_export_depend-->
-  <!--exec_depend>enum</exec_depend-->
-  <!--exec_depend>os</exec_depend-->
-  <exec_depend>roslaunch</exec_depend>
+  <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <!--exec_depend>subprocess</exec_depend-->
-  <!--exec_depend>sys</exec_depend-->
 
 
   <!-- The export tag contains other, unspecified, tags -->
